# ai-analyst-deploy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENT_OS_V2.md  DEPLOY.md  Dockerfile  README.md  _dashboard_harness.py  _decode_log.py  _dep_check.py  _probe_openrouter.py  _probe_out.txt  _probe_pipeline.py  _probe_pipeline2.py  _st_out.txt  docker-compose.yml  pyproject.toml  pytest.ini  requirements-streamlit.txt  requirements-v2.txt  requirements-vercel.txt  requirements.txt  test_output.txt  test_output_utf8.txt  vercel.json
.streamlit/: config.toml  secrets.toml.example
agent-skills-hub-main/: skills_index.json
agent-skills-hub-main/data/: aliases.json  bundles.json  catalog.json  package-lock.json  package.json
agent-skills-hub-main/skills/bilig-workpaper/: SKILL.md
agent-skills-hub-main/skills/loki-mode/examples/todo-app-generated/backend/: package-lock.json
agent-skills-hub-main/skills/loki-mode/examples/todo-app-generated/frontend/: package-lock.json  package.json
backend/: main.py
backend/agents/: feature_engineer.py  insight_generator.py  model_selector.py  planner.py  profiler.py  runtime.py  trainer.py
backend/api/: agent.py  chat.py  data_sources.py  status_ws.py  upload.py
backend/llm/: __init__.py  provider.py
backend/memory/: dataset_memory.py  experiment_store.py  user_preferences.py
backend/tools/: data_loader.py  data_sources.py  domain_detection.py  embeddings_3d.py  evaluation.py  ml_training.py
backend/ws/: event_stream.py
skills/business_domains/: aerospace.md  agriculture.md  automotive.md  construction.md  cybersecurity.md  ecommerce.md  education.md  energy.md  finance.md  gaming.md  government.md  healthcare.md  hospitality.md  hr.md  insurance.md  legal.md  logistics.md  manufacturing.md  marketing.md  media.md  mining_extraction.md  nonprofit.md  oil_gas.md  pharmaceuticals.md  public_sector.md  real_estate.md  retail.md  saas.md  startup.md  supply_chain.md  telecom.md  travel.md
tests/: test_agent_os_v2.py
ui/: app.py  theme.py
ui/components/: chat_bubble.py  feature_selector.py  feedback.py  glass_card.py  metric_card.py  plot_3d.py
ui/pages/: advisor.py  dashboard.py  intelligence.py
ui/services/: api_client.py  health.py  ws_client.py
ui/state/: app_state.py
