[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.vercel]
entrypoint = "backend.main:app"

[project]
name = "ai-analyst"

version = "2.0.0"
description = "Autonomous Data Science Agent OS with real-time multi-agent execution"
readme = "README.md"
requires-python = ">=3.12"
# Version 2.0.1 - Modernized for Python 3.12+
license = {text = "MIT"}
authors = [
    {name = "Ghulam Mustafa Keerio", email = "ghulammustafakeero@example.com"}
]
keywords = ["data-science", "machine-learning", "ai", "llm", "automation", "gemini"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "pyarrow>=16.0",
    "httpx>=0.27",
]

# Optional heavy dependencies (torch/transformers only used in fallback LLM paths)
[project.optional-dependencies]
llm = [
    "torch>=2.3",
    "transformers>=4.42",
    "sentence-transformers>=3.0",
    "tiktoken>=0.7",
]
langchain = [
    "langchain>=0.3",
    "langchain-core>=0.3",
    "langchain-community>=0.3",
    "langchain-google-genai>=2.0",
    "chromadb>=0.5",
    "faiss-cpu",
]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "black>=24.4",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "bandit",
]
cloud = [
    "boto3>=1.34",
    "google-cloud-storage>=2.17",
    "azure-storage-blob>=12.20",
]
database = [
    "asyncpg>=0.29",
    "redis>=5.0",
    "alembic>=1.13",
]
advanced = [
    "networkx>=3.2",
    "lifelines>=0.27",
    "statsmodels>=0.14",
]
all = [
    "ai-analyst[llm,langchain,dev,cloud,database,advanced]",
]



[project.urls]
Homepage = "https://github.com/Ghulam-Mustafa-Keerio/AI-Analyst"
Documentation = "https://github.com/Ghulam-Mustafa-Keerio/AI-Analyst/blob/main/README.md"
Repository = "https://github.com/Ghulam-Mustafa-Keerio/AI-Analyst"
Issues = "https://github.com/Ghulam-Mustafa-Keerio/AI-Analyst/issues"

[tool.setuptools]
packages = {find = {include = ["backend*", "ui*"]}}

[tool.black]
line-length = 100
target-version = ['py312', 'py313', 'py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/_remote_module_non_scriptable",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "venv", "env"]
skips = ["B101", "B601"]
